@@ -5,7 +5,8 @@ Revision history for TAP
         - Make TAP::Grammar public
         - Renamed Async to Parser
         - Add parse method to Source
-        - Moved SourceHandlers our of Harness
+        - Moved SourceHandler classes our of Harness
+        - Added SourceHandlers class
 
 0.3.8  2022-09-02T12:19:11+02:00
         - Correctly check exit code of processes
